--- a/views/hospital_register.ejs
+++ b/views/hospital_register.ejs
@@ -10,7 +10,14 @@
       <input type="password" class="form-control" id="pass" name="pass">
     </div>
   </div>
-  
+  <div class="form-group col-md-6">
+    <label for="inputPassword4">Contact No.</label>
+    <input type="password" class="form-control" id="pass" name="cno">
+    </div>
+  <div class="form-group col-md-6">
+    <label for="inputPassword4">Email</label>
+    <input type="password" class="form-control" id="pass" name="em">
+    </div>
   </div>
  <input type="hidden" name="username" id="username" value="<%- user%>" ></input>
   <button type="submit" class="btn btn-primary">Submit</button>
